crates/nash-report/tests/solve/snapshots/solve__inference__typed_union_function.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2354
description: "Code:\n\nmodule Main exposing (Shape(..), rotate)\n\ntype Shape\n    = Circle\n    | Square\n\nrotate : Shape -> Shape\nrotate shape = shape\n"
---
rotate : Shape -> Shape
